Added command to download default addon, some other tweaks to commands